--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.10.2
 click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
+Faker==18.3.2
+flake8==6.0.0
 Flask==2.2.3
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
@@ -13,7 +15,12 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+mccabe==0.7.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.7
 typing_extensions==4.5.0
 Werkzeug==2.2.3
