--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.10.2
+aniso8601==9.0.1
 click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
@@ -7,6 +8,7 @@ flake8==6.0.0
 Flask==2.2.3
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
@@ -21,6 +23,7 @@ pycodestyle==2.10.0
 pyflakes==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 six==1.16.0
 SQLAlchemy==2.0.7
 typing_extensions==4.5.0
