--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
 mccabe==0.7.0
+packaging==23.1
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pyflakes==3.0.1
