--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ email-validator==1.3.1
 Faker==18.3.2
 flake8==6.0.0
 Flask==2.2.3
+Flask-JWT-Extended==4.4.4
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-RESTful==0.3.9
@@ -24,6 +25,7 @@ packaging==23.1
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pyflakes==3.0.1
+PyJWT==2.6.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
